Add preliminary styling for exercise links

--- a/app/assets/stylesheets/modules/_timeline.styl
+++ b/app/assets/stylesheets/modules/_timeline.styl
@@ -495,3 +495,18 @@ p.graded
 .timeline-warning
   padding 10px
   border solid $warning_text 3px
+
+.timeline-exercise
+  padding 8px
+  // border 1px solid $border_med_dk
+  background $brand_primary 
+  color white
+  border-radius 3px
+  text-decoration none
+  &:hover
+    background white
+    color $brand_primary
+    border solid 1px $brand_primary
+  &:after
+    font-family 'icons'
+    content: " \EA0A"
